fix: fractions as unicode characters, 1/3, 2/3, 1/8 causing problems

--- a/dermardiros/anoushabour.tex
+++ b/dermardiros/anoushabour.tex
@@ -10,10 +10,10 @@
     \vspace*{\baselineskip}
 
     1~cup pearl barley \\
-    1/4~cup sugar \\
+    ¼~cup sugar \\
     Yellow and sultan raisins \\
     Dried apricots, quartered \\
-    1/4~tsp rose water or orange blossom water, optional
+    ¼~tsp rose water or orange blossom water, optional
 }
 
 \marginalfigure{dermardiros/images/Anoushabour.JPG}{Anoushabour from New Year's Eve brunch at AJ and Eddy's in 2011!}{fig:anoushabour}
