--- a/dermardiros/banana_cake.tex
+++ b/dermardiros/banana_cake.tex
@@ -12,11 +12,11 @@
 
     3~ripe bananas \\
     6~tbsp vegetable oil \\
-    1/2~cup sugar \\
+    ½~cup sugar \\
     1~egg \\
     1~tsp vanilla extract\\
-    1/4~tsp salt \\
-    1 1/2~cups all-purpose flour \\
+    ¼~tsp salt \\
+    1½~cups all-purpose flour \\
     1~tsp baking soda \\
     1~tsp baking powder
 }
