--- a/dermardiros/batons_sale.tex
+++ b/dermardiros/batons_sale.tex
@@ -13,8 +13,8 @@
     3~tsp baking powder \\
     1~tsp salt \\
     1~cup warm water \\
-    1 1/2~cups vegetable oil \\
-    1/2~cup zaatar \\
+    1½~cups vegetable oil \\
+    ½~cup zaatar \\
     1~egg \\
     Nigella seeds
 }
@@ -31,4 +31,4 @@ Family member: Nene Hermine
     \item Bake at 350\degree F for about 30~minutes.
 \end{enumerate}
 
-Sybil's trick: You can freeze 2/3~of the cookies once they have baked and cooled.
+Sybil's trick: You can freeze two-thirds of the cookies once they have baked and cooled.
