--- a/dermardiros/beureg.tex
+++ b/dermardiros/beureg.tex
@@ -12,8 +12,8 @@
 
     \textbf{Ingredients for dough} \\
     3~cups all-purpose flour \\
-    3/4~cup vegetable oil, Canola \\
-    1/4~cup butter, melted \\
+    ¾~cup vegetable oil, Canola \\
+    ¼~cup butter, melted \\
     1~tsp baking powder \\
     1~egg \\
     1~cup milk, room temperature \\
