--- a/dermardiros/biscuits_grandmere.tex
+++ b/dermardiros/biscuits_grandmere.tex
@@ -13,10 +13,10 @@
 
     4~cups all-purpose flour, Robin Hood \\
     2~tsp baking powder \\
-    1/2~tsp mahleb, ground \\
-    3/4~cup sugar \\
-    1/2~cup vegetable oil, Canola \\
-    1/2~cup margarine, Becel \\
+    ½~tsp mahleb, ground \\
+    ¾~cup sugar \\
+    ½~cup vegetable oil, Canola \\
+    ½~cup margarine, Becel \\
     1~cup milk \\
     Egg yolks \\
     Sesame seeds
