--- a/dermardiros/cheureg_greatgrandma.tex
+++ b/dermardiros/cheureg_greatgrandma.tex
@@ -13,8 +13,8 @@
     6~eggs \\
     2~packets of traditional yeast \\
     2~tsp sugar \\
-    1/2~tsp water \\
-    10~cups all-purpose flour + 1/2~cup, Robin Hood \\
+    ½~tsp water \\
+    10~cups all-purpose flour + ½~cup, Robin Hood \\
     Mahleb, ground \\
     2~cups of milk, lukewarm \\
     2~cups sugar \\
