--- a/dermardiros/ciambalone.tex
+++ b/dermardiros/ciambalone.tex
@@ -10,16 +10,16 @@
     Cook time: 35~minutes \\
     \vspace*{\baselineskip}
 
-    125~ml (1/2~cup) margarine or butter, room temperature \\
+    125~ml (½~cup) margarine or butter, room temperature \\
     3~eggs \\
-    175~ml (3/4~cups) sugar \\
-    50~ml (1/4~cup) oil \\
+    175~ml (¾~cups) sugar \\
+    50~ml (¼~cup) oil \\
     5~ml (1~tsp) vanilla extract \\
-    175~ml (3/4~cups) milk (keep a little to put on top of batter before sprinkling with sugar) \\
-    625~ml (2-1/2~cups) all purpose flour \\
+    175~ml (¾~cups) milk (keep a little to put on top of batter before sprinkling with sugar) \\
+    625~ml (2-½~cups) all purpose flour \\
     15~ml (3~tsp) baking powder \\
-    175~ml (3/4~cups) raisins (can substitute with Hershey's caramel Chipits) \\
-    175~ml (3/4~cups) Hershey's mini chocolate chips \\
+    175~ml (¾~cups) raisins (can substitute with Hershey's caramel Chipits) \\
+    175~ml (¾~cups) Hershey's mini chocolate chips \\
     2~red cherries \\
     2~green cherries
 }
