--- a/dermardiros/clementinesalad.tex
+++ b/dermardiros/clementinesalad.tex
@@ -11,7 +11,7 @@
 
     Two heads of romaine lettuce, about 35~leaves \\
     15~clementines \\
-    3/4~cup of cashews \\
+    ¾~cup of cashews \\
     Kraft Zesty Italian dressing
 }
 
