--- a/dermardiros/dinerburgers.tex
+++ b/dermardiros/dinerburgers.tex
@@ -22,7 +22,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for sauce} \\
-    1/2~yellow onion, diced \\
+    ½~yellow onion, diced \\
     Mayonnaise \\
     Yellow mustard \\
     Hot sauce \\
