--- a/dermardiros/frenchtoast.tex
+++ b/dermardiros/frenchtoast.tex
@@ -9,14 +9,14 @@
     \vspace*{\baselineskip}
 
     2~extra large eggs \\
-    1/2~cup of milk \\
+    ½~cup of milk \\
     4~slices of standard white square bread, cut in half \\
     Butter, as needed \\
     \vspace*{\baselineskip}
 
 \textbf{Ingredients for the syrup} \\
-    1/4~cup granulated white sugar \\
-    1/2~cup water \\
+    ¼~cup granulated white sugar \\
+    ½~cup water \\
     Few dashes of rose water
 }
 
