--- a/dermardiros/katnabour.tex
+++ b/dermardiros/katnabour.tex
@@ -10,7 +10,7 @@
     Cook time: 30~minutes \\
     \vspace*{\baselineskip}
 
-    1/2~cup rice, Calrose \\
+    ½~cup rice, Calrose \\
     3~cups milk, 2\% \\
     3~tbsp sugar
 }
