--- a/dermardiros/khorabie.tex
+++ b/dermardiros/khorabie.tex
@@ -13,10 +13,10 @@
     1~cup vegetable oil \\
     1~cup milk \\
     250~ml butter, melted, or unsalted margarine \\
-    1/2~packet of Crisco, melted \\
+    ½~packet of Crisco, melted \\
     3~tsp baking powder \\
     1~cup icing sugar \\
-    6~to 6-1/2~cups flour \\
+    6~to 6-½~cups flour \\
     1~kg dates, in puree, in a packet \\
     Zest and juice of 1~orange
 }
