--- a/dermardiros/koubeba.tex
+++ b/dermardiros/koubeba.tex
@@ -31,8 +31,8 @@ Family member: Sybil
 
 \begin{enumerate}
     \item In a bowl, add the bulgur, cover with hot water and set aside.
-    \item Once soaked, use your hand to knead the soaked bulgur for a few minutes, until all is mashed together. Add it to a larger bowl with the 1/2~kg of ground meat, salt and pepper. Mix everything well and set aside.
-    \item For the filling, cook the onion with some oil on a pan until soft. Add the other 1/2~kg of ground meat and cook until meat is browned. Add the spices, raisins and pine nuts. Cook the filling until evenly browned and let it cool.
+    \item Once soaked, use your hand to knead the soaked bulgur for a few minutes, until all is mashed together. Add it to a larger bowl with the ½~kg of ground meat, salt and pepper. Mix everything well and set aside.
+    \item For the filling, cook the onion with some oil on a pan until soft. Add the other ½~kg of ground meat and cook until meat is browned. Add the spices, raisins and pine nuts. Cook the filling until evenly browned and let it cool.
     \item Grease a 12-inch round baking dish with olive oil.
     \item Using your hands, spread half of the koubeba mixture evenly on the bottom of the greased baking dish.
     \item Spoon all the filling on top of the bottom layer.
