--- a/dermardiros/mantuh.tex
+++ b/dermardiros/mantuh.tex
@@ -12,9 +12,9 @@
 
     \textbf{Ingredients for dough} \\
     4~cups all-purpose flour \\
-    1/4~cup milk \\
-    1/2~tsp salt \\
-    1~cup lukewarm water + 1/4 - 1/2~cup more (as much as dough takes) \\
+    ¼~cup milk \\
+    ½~tsp salt \\
+    1~cup lukewarm water + ¼ to ½~cup more (as much as dough takes) \\
     Oil (to work dough with hands) \\
     \vspace*{\baselineskip}
 
@@ -38,7 +38,7 @@ Family member: Metzma Lucie
     \item In a large bowl, mix flour and salt.
     \item Mix in milk using a spoon. Add 1~cup water and mix with hands.
     \item Add a little oil to hands to help dough unstick.
-    \item Add 1/4 - 1/2~cup water slowly while mixing, until you get a soft dough.
+    \item Add ¼ to ½~cup water slowly while mixing, until you get a soft dough.
     \item You can add up to 2~handfuls of oil.
 
     \item Flatten dough using a rolling pin or a pasta machine.
