--- a/dermardiros/meatpies.tex
+++ b/dermardiros/meatpies.tex
@@ -15,11 +15,11 @@
     2~pounds minced lean beef (907~g or 1~kg) \\
     Small pack of bacon with maple \\
     Becel margarine \\
-    1/4~onion chopped in small pieces \\
+    ¼~onion chopped in small pieces \\
     5~tsp Provence spices \\
     Black pepper \\
     3~cups of red or white wine \\
-    1 1/2~cups of Italian bread crumbs (up to 3~cups if needed) \\
+    1½~cups of Italian bread crumbs (up to 3~cups if needed) \\
     2~packages of pie dough from Metro (Francois Hubert pie dough 1~kg makes 5~bases) \\
     Flour \\
     2~eggs
