--- a/dermardiros/pastameatsauce.tex
+++ b/dermardiros/pastameatsauce.tex
@@ -13,13 +13,13 @@
     2~tbsp olive oil \\
     1~finely chopped small onion \\
     1~garlic clove, crushed (optional) \\
-    1/2~pound of minced veal \\
-    1/2~pound of minced pork \\
-    1/2~pound of minced beef \\
+    ½~pound of minced veal \\
+    ½~pound of minced pork \\
+    ½~pound of minced beef \\
     300~g Chianti Red Wine Rosette de Lyon dried sausage by Papille \\
     1~can (796~ml) Aylmer Diced Tomatoes with Italian Spices \\
     2~cans (156~ml) of Unico Tomato Paste \\
-    1 1/4~cups of red wine \\
+    1¼~cups of red wine \\
     2~tsp dried oregano \\
     Fresh basil \\
     1~tsp sugar \\
@@ -36,7 +36,7 @@ Family member: Aunt Joanne
     \item Add the minced veal, pork and beef and cook until they change colour, stirring constantly and breaking up the meat. Stir in the dried sausage.
     \item Purée the diced tomatoes in a blender and pour into a cooking pot. You can also leave them diced as is.
     \item Mix each can of tomato paste in a cup of water and add them to the cooking pot.
-    \item Add 1-1/4~cups of red wine. Add sugar, salt and pepper.
+    \item Add 1-¼~cups of red wine. Add sugar, salt and pepper.
     \item Stir in the meat/onion/garlic mixture into the pot.
     \item Add dried oregano and fresh shredded basil and bring to a boil while stirring.
     \item Cover and lower the heat to a gentle simmer for 3~to 4~hours, stirring occasionally.
