--- a/dermardiros/strawberrysalad.tex
+++ b/dermardiros/strawberrysalad.tex
@@ -11,10 +11,10 @@
     
     140~grams of arugula lettuce \\
     420~grams (1~basket) of fresh Quebec strawberries \\
-    3/4~cup of pecans \\
-    1/2~cup of virgin olive oil \\
-    1/4~cup of balsamic vinegar \\
-    1/4~cup of maple syrup 
+    ¾~cup of pecans \\
+    ½~cup of virgin olive oil \\
+    ¼~cup of balsamic vinegar \\
+    ¼~cup of maple syrup 
 }
 
 Family member: Aunt Joanne
