--- a/dermardiros/tahini.tex
+++ b/dermardiros/tahini.tex
@@ -9,7 +9,7 @@
     \vspace*{\baselineskip}
 
     1~cup tahini \\
-    1/2~cup water \\
+    ½~cup water \\
     Juice of 5~lemons \\
     Garlic, finely chopped \\
     Cumin \\
