--- a/monanteras/bikini_ladies.tex
+++ b/monanteras/bikini_ladies.tex
@@ -14,11 +14,11 @@
     \textbf{Ingredients for cookies} \\
     227~g butter, room temperature \\
     1~cup brown sugar \\
-    1/4~cup molasses \\
+    ¼~cup molasses \\
     1~egg \\
-    2 3/4~cups all-purpose flour \\
+    2¾~cups all-purpose flour \\
     2~tsp cinnamon \\
-    1/2~tsp cloves \\
+    ½~tsp cloves \\
     1~tbsp ginger \\
     2~tsp baking powder \\
     Pinch salt \\
