--- a/monanteras/chocolate_cake.tex
+++ b/monanteras/chocolate_cake.tex
@@ -19,11 +19,11 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for chocolate icing} \\
-    1/2~cup butter, unsalted and at room temperature \\
+    ½~cup butter, unsalted and at room temperature \\
     1~cup icing sugar, sifted \\
     2~eggs, separated \\
     3-4~tsp cocoa powder, Fry's brand and sifted \\
-    1/2~tsp vanilla aroma or extract \\
+    ½~tsp vanilla aroma or extract \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for syrup} \\
