--- a/monanteras/dolmadakia.tex
+++ b/monanteras/dolmadakia.tex
@@ -38,7 +38,7 @@ Family member: Grandma Eleni
 \newthought{The dolmadakia} that Grandma Eleni would make are similar to Sarma, but would have Avgolemono, an egg-lemon creamy sauce. You can also make them yalatzi (only with rice and herbs) during lent. I remember her and my grandfather telling us they would pick the vine leaves from their neighbors' yards in their neighborhood in Laval!
 
 \begin{enumerate}
-    \item Blanch the vine leaves if using fresh. Fill a large bowl with cold water and ice cubes. Fill a large pot 2/3~of the way with water and bring to a boil. Once the water is boiling, place several leaves in the pot with a laddle. Press the leaves down gently with a ladle to ensure they are fully submerged in the boiling water. After 1-2~minutes or when the leaves are wilted, remove them from the water and immediately submerge them in ice water. Remove the leaves from the ice water with the strainer ladle and put them on a plate. Pat the grape leaves with a paper towel. If using jarred vine leaves, simply put the leaves on a paper towel and pat them dry.
+    \item Blanch the vine leaves if using fresh. Fill a large bowl with cold water and ice cubes. Fill a large pot two thirds of the way with water and bring to a boil. Once the water is boiling, place several leaves in the pot with a laddle. Press the leaves down gently with a ladle to ensure they are fully submerged in the boiling water. After 1-2~minutes or when the leaves are wilted, remove them from the water and immediately submerge them in ice water. Remove the leaves from the ice water with the strainer ladle and put them on a plate. Pat the grape leaves with a paper towel. If using jarred vine leaves, simply put the leaves on a paper towel and pat them dry.
     \item Next, prepare the stuffing: in a large bowl, add the ground beef, uncooked rice, eggs, onions, fresh herbs, salt, pepper and olive oil. Do not overwork the filling or it will be too dense.
     \item Line the bottom of a large wide pot with teared vines leaves. Roll the vine leaves with the filling. Place each into the pot tightly together, seam-side down. Continue until they are all in the pot, layering them to a maximum of 4~layers. Drizzle 1~tbsp of olive oil and some salt on very top.
     \item Add 1-2~cups water, or more, until they are all covered. Put a large plate over the dolmadakia to keep them from moving while they cook. Place the pot on the stove, cover and heat on high. When it comes to a boil, reduce the heat to medium. Reduce the heat once simmering and cook for 45~minutes to 1~hour, they are done when the rice and meat are fully cooked. Add some more water while cooking if needed to keep them covered while cooking.
