--- a/monanteras/eastereggs.tex
+++ b/monanteras/eastereggs.tex
@@ -11,7 +11,7 @@
     \textbf{Ingredients for cookies} \\
     48~eggs \\
     1~pack of Red Dye for Eggs, Rida \\
-    1/2~cup vinegar \\
+    ½~cup vinegar \\
     Vegetable oil
 }
 
