--- a/monanteras/fakes.tex
+++ b/monanteras/fakes.tex
@@ -10,7 +10,7 @@
     Cook time: 2~hours \\
     \vspace*{\baselineskip}
     
-    2 1/2~cups green lentils, dry \\
+    2½~cups green lentils, dry \\
     1~white onion \\
     3~tbsp olive oil \\
     2~garlic cloves, thinly sliced \\
