--- a/monanteras/fassolada.tex
+++ b/monanteras/fassolada.tex
@@ -10,7 +10,7 @@
     Cook time: 2~hours \\
     \vspace*{\baselineskip}
 
-    2 3/4~cups (500~g) white beans (haricots), dry \\
+    2¾~cups (500~g) white beans (haricots), dry \\
     1~white onion, finely chopped \\
     3~tbsp olive oil \\
     1~can tomato juice, Heinz (540~ml) \\
