--- a/monanteras/fassolakia.tex
+++ b/monanteras/fassolakia.tex
@@ -13,7 +13,7 @@
     1~large onion, chopped \\
     1~bag green beans \\
     1~can tomato sauce, Hunt's (213~ml) \\
-    1/2~cup parsley, chopped \\
+    ½~cup parsley, chopped \\
     Salt \\
     Oil \\
     3-5~red potatoes, peeled and quartered (keep in cold water)
