--- a/monanteras/hilopites with chicken.tex
+++ b/monanteras/hilopites with chicken.tex
@@ -15,7 +15,7 @@
     About 11~chicken drumsticks (without skin) \\
     Salt \\
     Pepper \\
-    1/2~can tomato sauce, Hunt's (213~ml) or 1~full can \\
+    ½~can tomato sauce, Hunt's (213~ml) or 1~full can \\
     1~tbsp tomato paste (optional) \\
     1~cup hilopites, or orzo/pasta 
 }
@@ -29,11 +29,11 @@ Family member: Mom
 \begin{enumerate}
     \item In a large pot, grate the onion and add some olive oil. Heat on high.
     \item When it starts to sizzle, stir with a wooden spoon and add the chicken drumsticks. Season with salt and pepper and stir until chicken is lightly browned.
-    \item Add the 1/2~or 1~can of tomato sauce and tomato paste (if using).
+    \item Add the ½~or 1~can of tomato sauce and tomato paste (if using).
     \item Add about 3~cups of water, mix and reduce heat.
-    \item Cook for 1 1/2~hours until reduced and left with about 2~cups liquid.
+    \item Cook for 1½~hours until reduced and left with about 2~cups liquid.
     \item Remove the chicken and while keeping liquid on a simmer, add the hilopites.
-    \item Add another 1/2~cup water and cook on a low simmer for 10-15~minutes until the hilopites are cooked. Can add a little more water if too thick.
+    \item Add another ½~cup water and cook on a low simmer for 10-15~minutes until the hilopites are cooked. Can add a little more water if too thick.
     \item Once hilopites are cooked and soup has thickened, remove from the heat and add back the chicken.
 \end{enumerate}
 
