--- a/monanteras/karidopita.tex
+++ b/monanteras/karidopita.tex
@@ -11,7 +11,7 @@
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for cake} \\
-    2 1/2~cups all-purpose flour (Monarch Cake \& pastry flour **put picture**) \\
+    2½~cups all-purpose flour (Monarch Cake \& pastry flour) \\   % TODO: put picture
     8~eggs \\
     2~cups sugar \\
     1~cup gingerale \\
@@ -19,13 +19,13 @@
     1~cup vegetable oil \\
     1~tsp baking soda \\
     1~tsp baking powder \\
-    1/2~tsp cinnamon \\
-    1/2~tsp cloves \\
+    ½~tsp cinnamon \\
+    ½~tsp cloves \\
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for syrup} \\
     3~cups sugar \\
-    2~cups water 
+    2~cups water
 }
 
 \textit{Walnut cake with syrup}
