--- a/monanteras/kokkinisto.tex
+++ b/monanteras/kokkinisto.tex
@@ -7,10 +7,10 @@
 \marginnote{
     \textbf{Makes 6+ servings} \\
     Prep time: 20~minutes \\
-    Cook time: 1 1/2~hours \\
+    Cook time: 1½~hours \\
     \vspace*{\baselineskip}
 
-    1/2~cup olive oil \\
+    ½~cup olive oil \\
     1~onion, grated \\
     1.5~kg beef or veal flank, cut into large cubes, or boneless stewing beef cubes \\
     1~can tomato sauce, Hunt's (213~ml) \\
@@ -27,7 +27,7 @@ Family member: Mom
     \item In a medium pot, heat some oil and cook the cubes of meat until they are brown all over. Remove the meat onto a plate and set aside.
     \item Add some olive oil and once hot, cook the grated onion for 2-3~minutes until it has softened.
     \item Return the meat to the pot, add the tomato sauce and about 2~cans of water. Stir well and season with salt and pepper.
-    \item Reduce the heat, and simmer, adding a little water if needed from time to time, for 1 1/2~hours, until the meat is tender and the sauce has thickened.
+    \item Reduce the heat, and simmer, adding a little water if needed from time to time, for 1½~hours, until the meat is tender and the sauce has thickened.
     \item Serve hot on top of rice!
 \end{enumerate}
 
