--- a/monanteras/kolokithokeftedes.tex
+++ b/monanteras/kolokithokeftedes.tex
@@ -14,12 +14,12 @@
     4~tbsp fresh mint, chopped \\
     1~cup green onions, chopped \\
     3~tbsp parsley, chopped \\
-    3/4~cup feta, crumbled \\
+    ¾~cup feta, crumbled \\
     2~eggs \\
     2~tsp cumin \\
-    1/2~tsp pepper \\
+    ½~tsp pepper \\
     1~tsp garlic powder \\
-    3/4 - 1~cup breadcrumbs \\
+    ¾ - 1~cup breadcrumbs \\
     1~tbsp oil
 }
 
@@ -31,7 +31,7 @@ Family member: Grandma Eleni
 
 \begin{enumerate}
     \item Squeeze out the excess water from the zucchinis using a towel.
-    \item In a large bowl, add all the ingredients and mix. Start by adding 3/4~cup of the breadcrumbs, and add more if the mix is wet and sticky.
+    \item In a large bowl, add all the ingredients and mix. Start by adding ¾~cup of the breadcrumbs, and add more if the mix is wet and sticky.
     \item Shape into 3-inch patties.
     \item Lightly flour the patties and fry until golden brown.
 \end{enumerate}
