--- a/monanteras/lemonpotatoes.tex
+++ b/monanteras/lemonpotatoes.tex
@@ -8,7 +8,7 @@
 \marginnote{
     \textbf{Makes 8~servings} \\
     Prep time: 15~minutes \\
-    Cook time: 1 - 1 1/2~hours \\
+    Cook time: 1 - 1½~hours \\
     \vspace*{\baselineskip}
 
     2~kg red potatoes, peeled and quartered \\
