--- a/monanteras/melomakarona.tex
+++ b/monanteras/melomakarona.tex
@@ -13,9 +13,9 @@
     \textbf{Ingredients for cake} \\
     7~cups all purpose flour, Five Roses
     3~cups vegetable oil
-    1/2~cup sugar \\
-    1/2~cup orange juice, freshly squeezed \\
-    1/2~cup beer \\
+    ½~cup sugar \\
+    ½~cup orange juice, freshly squeezed \\
+    ½~cup beer \\
     2~tsp cinnamon \\
     1~tsp cloves \\
     3~tsp baking powder \\
@@ -23,8 +23,8 @@
     
     \textbf{Ingredients for syrup and decoration} \\
     Greek honey \\
-    1/2~cup sugar \\
-    1/2~cup water \\
+    ½~cup sugar \\
+    ½~cup water \\
     Walnuts, crushed
 }
 
