--- a/monanteras/moustokouloura.tex
+++ b/monanteras/moustokouloura.tex
@@ -10,16 +10,16 @@
     Cook time: 12-15~minutes \\
     \vspace*{\baselineskip}
 
-    4 1/2~cups all-purpose flour, sifted \\
-    1/2~tsp cinnamon \\
-    1/2~tsp cloves \\
+    4½~cups all-purpose flour, sifted \\
+    ½~tsp cinnamon \\
+    ½~tsp cloves \\
     1~tsp baking powder \\
     1~tsp ammonia powder \\
     2~eggs \\
-    3/4~cup sugar \\
-    1/2~vegetable oil \\
-    1/2~orange juice (fresh is better) \\
-    1/2~cup molasses
+    ¾~cup sugar \\
+    ½~vegetable oil \\
+    ½~orange juice (fresh is better) \\
+    ½~cup molasses
 }
 
 \textit{The brown cookies}
