--- a/monanteras/tiropitakia_spanakopitakia.tex
+++ b/monanteras/tiropitakia_spanakopitakia.tex
@@ -18,11 +18,11 @@
     \textbf{Ingredients for Spanakopitakia filling} \\
     2~bags spinach \\
     2~green onions, green parts finely chopped \\
-    1/4~cup fresh dill, chopped \\
+    ¼~cup fresh dill, chopped \\
     2~eggs, beaten \\
     1~tsp baking powder \\
     Approximately 500~g Canadian feta cheese, crumbled \\
-    1/2~block (125~g) of cream cheese, Philadelphia \\
+    ½~block (125~g) of cream cheese, Philadelphia \\
     2~tbsp cottage cheese, Liberte or another brand \\
     Salt and pepper, to taste \\
     \vspace*{\baselineskip}
@@ -31,7 +31,7 @@
     2~eggs, beaten \\
     1~tsp baking powder \\
     Approximately 500~g Canadian feta cheese, crumbled \\
-    1/2~block (125~g) of cream cheese, Philadelphia \\
+    ½~block (125~g) of cream cheese, Philadelphia \\
     2~tbsp cottage cheese, Liberte or another brand \\
     Salt and pepper, to taste
 }
