--- a/monanteras/tsoureki.tex
+++ b/monanteras/tsoureki.tex
@@ -13,12 +13,12 @@
 
     \textbf{Ingredients for dough} \\
     11~cups all purpose flour (Five Roses) \\
-    1 1/2~cups sugar \\
-    1 1/2~cups milk \\
-    1 1/2~cups butter, melted and cooled \\
+    1½~cups sugar \\
+    1½~cups milk \\
+    1½~cups butter, melted and cooled \\
     8~eggs \\
     1~tsp mahleb \\
-    1/2~tsp salt \\
+    ½~tsp salt \\
     2~packets active yeast \\
     \vspace*{\baselineskip}
 
