--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -12,12 +12,12 @@
 
     \textbf{Dough ingredients} \\
     530~g all-purpose flour \\
-    3/4~tsp salt \\
+    ¾~tsp salt \\
     100~g sugar \\
     2~tsp instant yeast \\
-    Grated zest of 1~lemon or 1/2~orange \\
+    Grated zest of 1~lemon or ½~orange \\
     3~eggs \\
-    1/2~cup water + 1-2~tbsp extra water \\
+    ½~cup water + 1-2~tbsp extra water \\
     150~g butter, unsalted room temperature, not too soft \\
     Vegetable oil or Pam spray \\
     \vspace*{\baselineskip}
