--- a/velsa/chickencacciatore.tex
+++ b/velsa/chickencacciatore.tex
@@ -12,14 +12,14 @@
     \vspace*{\baselineskip}
 
     3-4~chicken breasts, cut into pieces \\
-    1/4~cup olive oil \\
+    ¼~cup olive oil \\
     227~g white mushrooms, thinly sliced \\
     1~large onion, thinly sliced or diced \\
     2~red bell peppers, cut into cubes \\
     2~garlic cloves, finely chopped \\
-    3/4~cup white or red wine \\
-    1/2 28~oz can diced tomatoes \\
-    1/2 28~oz can of tomato puree or Passata \\
+    ¾~cup white or red wine \\
+    ½ 28~oz can diced tomatoes \\
+    ½ 28~oz can of tomato puree or Passata \\
     1-2~tbsp harissa \\
     Salt \\
     Pepper \\
