--- a/velsa/gigantest_plaki.tex
+++ b/velsa/gigantest_plaki.tex
@@ -13,10 +13,10 @@
     500~g gigantes (lima) beans, dried and soaked in cold water overnight \\
     1~medium onion, finely chopped \\
     4-5~tbsp parsley, chopped \\
-    1/2~tsp celery, finely chopped \\
+    ½~tsp celery, finely chopped \\
     1~garlic clove, minced \\
-    1/2~cup olive oil \\
-    1/4~cup hot water + 1/4~cup more if needed \\
+    ½~cup olive oil \\
+    ¼~cup hot water + ¼~cup more if needed \\
     400~g can diced tomatoes \\
     Pinch dried oregano \\
     Salt \& pepper to taste
@@ -38,7 +38,7 @@ Family member: Elsa \& Vaski
     \item On the stove, heat olive oil in a large pot (or Creuset). Add the onion and cook until translucent. Add garlic and cook 1~minute more.
     \item Add the gigantes beans and hot water. Cook for about 30~minutes on the stove top.
     \item Add the diced tomatoes, parsley, celery (if using), oregano, salt and pepper. Place in the oven at 350\degree F.
-    \item Simmer until reduced and thickened, and can add the 1/4~cup extra water to get wanted consistency.
+    \item Simmer until reduced and thickened, and can add the ¼~cup extra water to get wanted consistency.
     \item After about 1~hour, check peas for doneness, remove from oven and let cool.
     \item Top with more fresh parsley, serve with toasted village bread and feta.
 \end{enumerate}
