--- a/velsa/kourabiewithnuts.tex
+++ b/velsa/kourabiewithnuts.tex
@@ -16,7 +16,7 @@
     1~tbsp baking powder \\
     75~g icing sugar, sifted \\
     1~tbsp rosewater \\
-    1/2~tsp vanilla extract \\
+    ½~tsp vanilla extract \\
     1~pinch salt \\
     Icing sugar for powdering
 }
