--- a/velsa/pastitsio.tex
+++ b/velsa/pastitsio.tex
@@ -7,20 +7,20 @@
 
 \marginnote{
     \textbf{Makes 8+} \\
-    Prep time: 1 1/2~hours \\
+    Prep time: 1½~hours \\
     Cook time: 1~hour \\
     \vspace*{\baselineskip}
 
     \textbf{Meat sauce ingredients} \\
-    1/2~cup olive oil \\
+    ½~cup olive oil \\
     1~onion, grated \\
     500~g ground beef \\
     1~cup tomato puree \\
     1~tbsp tomato paste \\
-    1/2~tsp sugar \\
+    ½~tsp sugar \\
     3~tbsp parsley, chopped \\
     1~egg white, lightly beaten \\
-    1/2~cup Kefalograviera cheese, grated \\
+    ½~cup Kefalograviera cheese, grated \\
     Salt and Pepper \\
     \vspace*{\baselineskip}
 
@@ -29,7 +29,7 @@
     8~tbsp (100~g) butter, unsalted \\
     8~tbsp all-purpose flour \\
     4~egg yolks \\
-    1/2~cup Kefalograviera cheese, grated \\
+    ½~cup Kefalograviera cheese, grated \\
     2~cups Gruyere cheese, grated \\
     Salt and Pepper \\
     Nutmeg \\
@@ -50,7 +50,7 @@ Family member: Elsa \& Vaski
 \newthought{Pastitsio} was one of our favourite dishes when we were kids because it was so comforting. This version is one Vaski \& I discovered from Vefa, the famous Greek chef, and like to make it for gatherings because you can't go wrong! You can use your own meat sauce for this recipe or a store-bought one to speed things up.
 
 \begin{enumerate}
-    \item To make the meat sauce, heat the olive oil in a large pan. Add the grated onion and cook it on low heat until it is soft. Add the ground beef and cook it for 15~minutes, breaking up into pieces using a wooden spatula. When it is lightly browned, stir in the tomato puree, tomato paste, sugar and parsley, and season with salt and pepper. Let it simmer for 15-20~minutes until it has reduced. Once done, let the meat sauce cool completely. Fold in the egg white and 1/2~cup of grated Kefalograviera cheese. Taste and adjust the seasoning if needed, then set aside.
+    \item To make the meat sauce, heat the olive oil in a large pan. Add the grated onion and cook it on low heat until it is soft. Add the ground beef and cook it for 15~minutes, breaking up into pieces using a wooden spatula. When it is lightly browned, stir in the tomato puree, tomato paste, sugar and parsley, and season with salt and pepper. Let it simmer for 15-20~minutes until it has reduced. Once done, let the meat sauce cool completely. Fold in the egg white and ½~cup of grated Kefalograviera cheese. Taste and adjust the seasoning if needed, then set aside.
     \item Bring a large pot of water and a pinch of salt to a boil and cook the pasta for 8-10~minutes, or follow the instructions on the package for al dente. Drain and toss with 4~tbsp of melted butter then let it cool.
     \item To make the Bechamel sauce, warm the whole milk in a pot or in the microwave. In a medium pot, melt the butter and then stir in the flour. Whisk on the stove for 1~minute. Remove the pot from the stove and slowly add some of the warmed milk, stirring constantly with the whisk until the mixture is smoothe. Break any lumps that may form, or strain the sauce into another pot if needed. Return the sauce to medium heat, and gradually at the remaining milk while whisking. Cook for approximately 15~minutes, always whisking, until the sauce is thickened and smoothe. Remove from the heat, season with salt, pepper and nutmeg.
     \item Fold the egg yolks into the sauce, whisking to fully incorporate them. Then add the remaining grated Kefalograviera cheese.
