--- a/velsa/tsoureki_choreg.tex
+++ b/velsa/tsoureki_choreg.tex
@@ -12,12 +12,12 @@
     \vspace*{\baselineskip}
 
     \textbf{Dry ingredients} \\
-    2-1/4~tsp instant yeast \\
+    2-¼~tsp instant yeast \\
     2~tsp mahleb \\
     2.5~g mastiha, freshly ground \\
     830~g AP flour, Robin Hood \\
     267~g sugar \\
-    1/2~tsp salt \\
+    ½~tsp salt \\
     \vspace*{\baselineskip}
 
     \textbf{Wet ingredients} \\
@@ -42,7 +42,7 @@ Family member: Elsa \& Vaski
 \begin{enumerate}
     \item In a mixing bowl, whisk the dry ingredients. In another bowl, whisk wet ingredients together. Gradually add wet ingredients to dry ingredients while mixing. Mix for 5~minutes with the paddle. Let rest for a few minutes.
     \item Mix for 5-7~minutes while adding about 90~g additional flour until dough comes together and sides start to unstick. Switch to hook attachment. (If dough already has come together don't add any additional flour).
-    \item Add 1/3~of the butter and mix until fully incorporated before adding another third. Do the same for the last third of the butter.
+    \item Add a thirds of the butter and mix until fully incorporated before adding another third. Do the same for the last third of the butter.
     \item Mix on medium until dough is smooth, has unstuck from the sides of the bowl and passes the windowpane test. Approximately 20~minutes of mixing total. Place dough in a bowl, cover with plastic wrap and let rise for 90~minutes in a warm place - in the oven with lights on/oven off works well!
     \item Divide dough into 80~g and shape into balls. Shape into small logs and into 6~braids. If you have extra strands you can make individual kaiser buns. Let rise 1~hour to 1~hour and a half.
     \item Meanwhile, preheat the oven to 350\degree F.
