--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -10,14 +10,14 @@
     Cook time: 12-15~minutes \\
     \vspace*{\baselineskip}
 
-    1/2~cup granulated sugar (100~g) \\
-    3/4~cup brown sugar, packed (165~g) \\
+    ½~cup granulated sugar (100~g) \\
+    ¾~cup brown sugar, packed (165~g) \\
     1~tsp salt
-    1/3~cup unsalted butter, melted (113~g) \\
+    ⅓~cup unsalted butter, melted (113~g) \\
     1~large egg \\
     1~tsp vanilla extract \\
-    1 1/4~cups all-purpose flour (155~g) \\
-    1/2~tsp baking soda \\
+    1¼~cups all-purpose flour (155~g) \\
+    ½~tsp baking soda \\
     4~oz milk or semi-sweet chocolate chunks (110~g) \\
     4~oz dark chocolate chunks (110~g), or your preference
 }
