--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -10,14 +10,14 @@
     Prep time: 30-40~minutes \\
     Cook time: 45~minutes \\
     \vspace*{\baselineskip}
-    
-    1/2~Savoy cabbage \\
+
+    ½~Savoy cabbage \\
     1~lb of ground beef \\
-    1/4~cup + 1~tbsp rice, Calrose \\
+    ¼~cup + 1~tbsp rice, Calrose \\
     1~medium onion, chopped \\
-    1/2~tsp salt \\
-    1/2~tsp pepper \\
-    3/4~cup + 1/4 - 1/3~cup Passata, Unico (low sodium)
+    ½~tsp salt \\
+    ½~tsp pepper \\
+    ¾~cup + ¼ to ⅓~cup Passata, Unico (low sodium)
 }
 
 \marginalfigure{dermardiros/images/PXL_20240128_010747331.PORTRAIT.ORIGINAL.jpg}{Topped with yogurt and dill!}{fig:lahanai_dolma}
@@ -33,7 +33,7 @@ Family member: Metzma Lucie
     \item Put each boiled leaf on a plate lined with paper towel. Reserved cabbage water.
     \item In a medium bowl, mix ground beef, rice, onion, salt and pepper.
     \item Place teared cabbage leaves at the bottom of a large wide pot. Roll dolma with meat filling and place each into the pot tightly together, seam-side down. Make 2~layers at most.
-    \item Mix 1~cup of water to 3/4~cup Passata and add it to the pot containing the dolma.
+    \item Mix 1~cup of water to ¾~cup Passata and add it to the pot containing the dolma.
     \item Place the pot on the stove, cover and heat on high. Reduce the heat once simmering and cook for 30-40~min.
     \item Add more water/Passata if necessary to get the consistency you like, adjust seasoning.
     \item Serve with yogurt and dill/parsley.
