--- a/monanteras/easter_koulourakia.tex
+++ b/monanteras/easter_koulourakia.tex
@@ -12,11 +12,11 @@
 
     4~cups all-purpose flour (Five Roses preferably) \\
     3~eggs, separated \\
-    1 1/4~cups sugar \\
-    3/4~cup butter, unsalted, melted and cooled \\
+    1¼~cups sugar \\
+    ¾~cup butter, unsalted, melted and cooled \\
     1~tsp ammonia powder \\
     2~tsp baking powder \\
-    3/4~tsp vanilla powder (or 1~tsp vanilla extract)
+    ¾~tsp vanilla powder (or 1~tsp vanilla extract)
 }
 
 \textit{The white cookies}
@@ -32,7 +32,7 @@ Family member: Grandma Eleni
     \item In bowl, beat the egg whites with a small amount of sugar using a mixer to obtain a meringue. Place in the fridge.
     \item Warm milk, remove from the heat and add ammonia powder. Stir until it foams and set it aside. Be careful - it smells strong!
     \item Using a mixer, beat the egg yolks with the remaining sugar, slowly add the melted butter and foamy milk/ammonia while mixing. Using a spatula, fold in the egg whites.
-    \item Slowly add the dry ingredients to the wet ingredients, add as much as the dry as needed (normally use 3 1/2 - 4~cups).
+    \item Slowly add the dry ingredients to the wet ingredients, add as much as the dry as needed (normally use 3½ - 4~cups).
     \item Mix with a spatula (or hands), scrape the sides of the bowl. Add very little oil to hands and mix with hands to form a dough. It should unstick from the bowl.
     \item Shape into balls, then thin ropes and twists, pretzels and koulouria.
     \item Place on baking sheets lined with parchment, brush with the reserved egg yolks and sprinkle with almond flakes.
