--- a/monanteras/gemista.tex
+++ b/monanteras/gemista.tex
@@ -40,8 +40,8 @@ Family member: Mom
     \item Preheat oven to 350\degree F and grease a 9~x~13-inch ovenproof dish with Pam spray.
     \item Wash the tomatoes and remove the stems. Slice the tops off each tomato, leaving a bit of flesh attached. Carefully remove the flesh out of each tomato and place it into a bowl. Place each one of the tomatoes into the prepared baking dish and place their tops aside.
     \item Cut the top of the peppers, clean the inside of each and place them in the baking dish, place their tops aside.
-    \item Heat 1/2~cup of olive oil in a pot and cook the onion. Once softened, add the garlic and stir well. Add the minced meat, rice, parsley and mint, and stir well. Season with salt and pepper, and cook until the meat has browned. Add the insides of the tomatoes and 1/2~can of Heinz tomato juice. Stir well.
+    \item Heat ½~cup of olive oil in a pot and cook the onion. Once softened, add the garlic and stir well. Add the minced meat, rice, parsley and mint, and stir well. Season with salt and pepper, and cook until the meat has browned. Add the insides of the tomatoes and ½~can of Heinz tomato juice. Stir well.
     \item Using a spoon, stuff the tomatoes and the peppers until a little below the rim and cover with their tops. Arrange the sliced potatoes around the \textgreek{Γεμιστά}.
-    \item Pour the remaining 1/2~can of tomato juice as well as 1/2~cup water in the pan. Drizzle the other 1/2~cup olive oil over the tomatoes and potatoes. Season with salt, pepper and oregano. Add some breadcrumbs and grated Pecorino cheese on the tops.
+    \item Pour the remaining ½~can of tomato juice as well as ½~cup water in the pan. Drizzle the other ½~cup olive oil over the tomatoes and potatoes. Season with salt, pepper and oregano. Add some breadcrumbs and grated Pecorino cheese on the tops.
     \item Bake in the preheated oven uncovered for 60-70~minutes, or until the tomatoes are golden on top. The potatoes should be easily pierced with a knife.
 \end{enumerate}
