--- a/monanteras/lamb and potatoes.tex
+++ b/monanteras/lamb and potatoes.tex
@@ -7,7 +7,7 @@
 \marginnote{
     \textbf{Makes 8+ servings} \\
     Prep time: 45~minutes \\
-    Cook time: 1 1/2 - 2~hours \\
+    Cook time: 1½ - 2~hours \\
     \vspace*{\baselineskip}
 
     1~leg of lamb \\
