--- a/monanteras/mavromatika.tex
+++ b/monanteras/mavromatika.tex
@@ -10,9 +10,9 @@
     Cook time: 2~hours + overnight soaking \\
     \vspace*{\baselineskip}
 
-    1/2~mug of black eyed peas, dried (or 1/2~cup) \\
+    ½~mug of black eyed peas, dried (or ½~cup) \\
     1~medium onion, grated \\
-    1/2 - 1~can tomato sauce, Hunt's (213~ml) \\
+    ½ - 1~can tomato sauce, Hunt's (213~ml) \\
     2~bags of spinach, fresh \\
     Olive oil
 }
