--- a/monanteras/portokalopita.tex
+++ b/monanteras/portokalopita.tex
@@ -13,24 +13,24 @@
     \textbf{Ingredients for cake} \\
     450~g phyllo sheets (1~pack) \\
     4~eggs \\
-    3/4~cup sugar \\
+    ¾~cup sugar \\
     Zest from 2~oranges \\
     1~cup Greek yogurt \\
-    1/4~tsp salt \\
+    ¼~tsp salt \\
     1~tsp baking soda \\
     1~tsp baking powder \\
     1~cup vegetable oil \\
-    1/2~cup orange juice, freshly squeezed \\
+    ½~cup orange juice, freshly squeezed \\
     1~tsp vanilla extract \\
     Vegetable oil for greasing the baking pan
     \vspace*{\baselineskip}
 
     \textbf{Ingredients for syrup} \\
-    1 1/2~cups sugar \\
-    1 1/2~cups water \\
-    1/3~cup orange juice \\
+    1½~cups sugar \\
+    1½~cups water \\
+    ⅓~cup orange juice \\
     1~cinnamon stick \\
-    1/4~tsp orange blossom water, optional
+    ¼~tsp orange blossom water, optional
 }
 
 \textit{Orange phyllo cake}
