chore: make degF default over degC, put degC in ()

--- a/dermardiros/best_chocolatechip_cookies.tex
+++ b/dermardiros/best_chocolatechip_cookies.tex
@@ -27,7 +27,7 @@
 Family member: Emma
 
 \begin{enumerate}
-    \item Preheat oven to 350\degree F or 180\degree C.
+    \item Preheat oven to 350\degree F (180\degree C).
     \item Bake for 12-15~minutes.
 \end{enumerate}
 
