--- a/dermardiros/ciambalone.tex
+++ b/dermardiros/ciambalone.tex
@@ -29,7 +29,7 @@
 Family member: Aunt Joanne
 
 \begin{enumerate}
-    \item Preheat oven at 180\degree C (350\degree F).
+    \item Preheat oven at 350\degree F (180\degree C).
     \item Mix the sugar, butter or margarine, eggs and oil.
     \item Sift the flour and baking powder, and add them to egg mixture alternating with the milk.
     \item Add the vanilla extract and mix.
@@ -37,7 +37,7 @@ Family member: Aunt Joanne
     \item Spray baking Pam on the bundt cake mold and pour the batter in the mold.
     \item Spread the leftover milk on top of the batter.
     \item Cut the cherries in half and place on top of batter (optional). Sprinkle a bit of sugar on top of batter.
-    \item Bake for 35~minutes at 180\degree C (350\degree F). Let the cake cool in the mold and remove from mold after 30~minutes.
+    \item Bake for 35~minutes at 350\degree F (180\degree C). Let the cake cool in the mold and remove from mold after 30~minutes.
 \end{enumerate}
 
 \captionfigure{dermardiros/images/Ciambalone.jpg}{Grandma Lucie's birthday in 2024}{fig:ciambalone}
