chore: min to minute(s)

--- a/dermardiros/lahanai_dolma.tex
+++ b/dermardiros/lahanai_dolma.tex
@@ -29,12 +29,12 @@ Family member: Metzma Lucie
 \begin{enumerate}
     \item Heat water and salt in a small pot.
     \item Remove each cabbage leaf gently and cut out the stem (middle hard part).
-    \item Put a the leaves 3~at a time into the boiling water and leave for 1~min until they are tender.
+    \item Put a the leaves 3~at a time into the boiling water and leave for 1~minute until they are tender.
     \item Put each boiled leaf on a plate lined with paper towel. Reserved cabbage water.
     \item In a medium bowl, mix ground beef, rice, onion, salt and pepper.
     \item Place teared cabbage leaves at the bottom of a large wide pot. Roll dolma with meat filling and place each into the pot tightly together, seam-side down. Make 2~layers at most.
     \item Mix 1~cup of water to ¾~cup Passata and add it to the pot containing the dolma.
-    \item Place the pot on the stove, cover and heat on high. Reduce the heat once simmering and cook for 30-40~min.
+    \item Place the pot on the stove, cover and heat on high. Reduce the heat once simmering and cook for 30-40~minutes.
     \item Add more water/Passata if necessary to get the consistency you like, adjust seasoning.
     \item Serve with yogurt and dill/parsley.
 \end{enumerate}
