--- a/monanteras/lamb and potatoes.tex
+++ b/monanteras/lamb and potatoes.tex
@@ -27,7 +27,7 @@ Family member: Mom \& Dad
     \item Prepare the leg of lamb: cut the leg into pieces or leave it whole and add it to a large bowl.  Add olive oil, salt, freshly ground pepper and oregano on all its sides, and toss it well. Pierce the leg with a knife and put the pieces of garlic inside. Place the lamb in a large baking dish or roasting pan.
     \item In a bowl, toss the potatoes with olive oil, salt, pepper and oregano and add them to the baking dish.
     \item Pour the lemon juice on the lamb and potatoes, then add 1~cup of water.
-    \item Place in the oven uncovered for 1~hour and a half, or until the potatoes are soft and can be pierced easily with a knife. You can add 30~min to make sure there the top of the lamb is crispy!
+    \item Place in the oven uncovered for 1~hour and a half, or until the potatoes are soft and can be pierced easily with a knife. You can add 30~minutes to make sure there the top of the lamb is crispy!
 \end{enumerate}
 
 \twosidecaptionfigure{monanteras/images/Lamb.jpg}{monanteras/images/Lamb 2.jpg}{(Left) Lamb before putting it in the oven, (Right) Lamb after cooking}{fig:lambpotatoes}
