--- a/monanteras/mavromatika.tex
+++ b/monanteras/mavromatika.tex
@@ -30,6 +30,6 @@ Family member: Mom
     \item After about 1~hour to 1~hour and a half, check the beans for doneness, then turn off heat and let cool.
 \end{enumerate}
 
-To speed things up, I would use 1~can of black eyed peas and skip Steps 1~and 2. It is quicker to make and would take a total of 45~min to cook.
+To speed things up, I would use 1~can of black eyed peas and skip Steps 1~and 2. It is quicker to make and would take a total of 45~minutes to cook.
 
 Also really good with, you guessed it, a slice of village bread and a large piece of feta!
